--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Sprocket76-Github</title>
-    <meta name="description" content="Our first page">
-    <meta name="keywords" content="html tutorial template">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Sprocket76 Github</h1>
-    <h2>Mon repo Github</h2>
+    <div>
+        <h1>Sprocket76 - Github</h1>
+        <h2>Mon premier repo github</h2>
+        <h3>En dévelopement...</h3>
+    </div>
 </body>
 
 </html>
