--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h1>Sprocket76 - Github</h1>
         <h2>Mon premier repo github</h2>
         <h3>En dévelopement...</h3>
+
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque veniam accusantium necessitatibus pariatur itaque harum nulla ut minima quo maxime quis quidem voluptas, architecto at quaerat incidunt expedita sunt maiores.</p>
     </div>
 </body>
 
