--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprocket76-GitHub</title>
+    <title>SPROCKET76-GitHub</title>
 
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -15,6 +15,8 @@
 <body>
     <div class="container">
         <h1>Sprocket76 - Github</h1>
+    </div>
+    <div class="container-lg">
         <h2>Mon premier repo github</h2>
         <h3>En dévelopement...</h3>
 
