--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>SPROCKET76-GitHub</title>
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
 </head>
@@ -21,7 +22,94 @@
         <h3>En dévelopement...</h3>
 
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque veniam accusantium necessitatibus pariatur itaque harum nulla ut minima quo maxime quis quidem voluptas, architecto at quaerat incidunt expedita sunt maiores.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, laboriosam sit. Recusandae similique nisi, molestiae voluptatum quibusdam dolorem ad. Est dolorum explicabo minus cum pariatur earum delectus a quia aliquam, maxime excepturi. Sunt, aperiam nostrum illo eum consequuntur magni! Reprehenderit, commodi excepturi.</p>
     </div>
+
+    <div class="container">
+    <footer>
+        <div class="container-fluid px-lg-5">
+        <div class="row">
+        <div class="col-md-9 py-5">
+        <div class="row">
+        <div class="col-md-4 mb-md-0 mb-4">
+        <h2 class="footer-heading">About us</h2>
+        <p>Suivez-nous sur nos réseaux sociaux pour ne pas manquer les nouveautés....</p>
+        <ul class="bozzo">
+            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fab fa-instagram fa-2x"></span></a></li>
+            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fab fa-facebook fa-2x"></span></a></li>
+            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fab fa-amazon fa-2x"></span></a></li>
+            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Github"><span class="fab fa-github fa-2x"></span></a></li>
+            <li><a href="#"><span class="fab fa-github fa-2x"></span></a></li>
+        </ul>
+        </div>
+        <div class="col-md-8">
+        <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-9">
+        <div class="row">
+        <div class="col-md-6 mb-md-0 mb-6">
+        <h2 class="footer-heading">Discover</h2>
+        <ul class="">
+        <li><a href="#" class="py-1 d-block">Buy &amp; Sell</a></li>
+        <li><a href="#" class="py-1 d-block">Merchant</a></li>
+        <li><a href="#" class="py-1 d-block">Giving back</a></li>
+        <li><a href="#" class="py-1 d-block">Help &amp; Support</a></li>
+        </ul>
+        </div>
+        <div class="col-md-6 mb-md-0 mb-6">
+        <h2 class="footer-heading">About</h2>
+        <ul class="list-unstyled">
+        <li><a href="#" class="py-1 d-block">Staff</a></li>
+        <li><a href="#" class="py-1 d-block">Team</a></li>
+        <li><a href="#" class="py-1 d-block">Careers</a></li>
+        <li><a href="#" class="py-1 d-block">Blog</a></li>
+        </ul>
+        </div>
+        <!-- <div class="col-md-4 mb-md-0 mb-4">
+        <h2 class="footer-heading">Resources</h2>
+        <ul class="list-unstyled">
+        <li><a href="#" class="py-1 d-block">Security</a></li>
+        <li><a href="#" class="py-1 d-block">Global</a></li>
+        <li><a href="#" class="py-1 d-block">Charts</a></li>
+        <li><a href="#" class="py-1 d-block">Privacy</a></li>
+        </ul>
+        </div> -->
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        <div class="row mt-md-5">
+            <div class="col-md-12">
+                <p>Sprocket76.com | en développement ...</p>
+            </div>
+        </div>
+        </div>
+        <div class="col-md-3 py-md-5 py-4 aside-stretch-right pl-lg-5">
+        <h2 class="footer-heading footer-heading-white">Contact us</h2>
+        <form action="#" class="contact-form">
+        <div class="form-group">
+        <input type="text" class="form-control" placeholder="Your Name">
+        </div>
+        <div class="form-group">
+        <input type="text" class="form-control" placeholder="Your Email">
+        </div>
+        <div class="form-group">
+        <input type="text" class="form-control" placeholder="Subject">
+        </div>
+        <div class="form-group">
+        <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
+        </div>
+        <div class="form-group">
+        <button type="submit" class="form-control submit px-3">Send</button>
+        </div>
+        </form>
+        </div>
+        </div>
+        </div>
+    </footer>
+    </div>
+
 </body>
 
 </html>
