ajout h1.toto modification pour le header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <h1>Sprocket76 - Github</h1>
+        <h1 class="toto">Sprocket76 - Github</h1>
     </div>
     <div class="container-lg">
         <h2>Mon premier repo github</h2>
@@ -33,14 +33,13 @@
         <div class="col-md-9 py-5">
         <div class="row">
         <div class="col-md-4 mb-md-0 mb-4">
-        <h2 class="footer-heading">About us</h2>
+        <h2 class="footer-heading">Qui sommes-nous</h2>
         <p>Suivez-nous sur nos réseaux sociaux pour ne pas manquer les nouveautés....</p>
         <ul class="bozzo">
-            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fab fa-instagram fa-2x"></span></a></li>
-            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fab fa-facebook fa-2x"></span></a></li>
-            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fab fa-amazon fa-2x"></span></a></li>
-            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Github"><span class="fab fa-github fa-2x"></span></a></li>
-            <li><a href="#"><span class="fab fa-github fa-2x"></span></a></li>
+            <li class="ftco-animate"><a class="linkb" href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fab fa-instagram fa-2x"></span></a></li>
+            <li class="ftco-animate"><a class="linkb" href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fab fa-facebook fa-2x"></span></a></li>
+            <li class="ftco-animate"><a class="linkb" href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fab fa-amazon fa-2x"></span></a></li>
+            <li class="ftco-animate"><a class="linkb" href="#" data-toggle="tooltip" data-placement="top" title="Github"><span class="fab fa-github fa-2x"></span></a></li>
         </ul>
         </div>
         <div class="col-md-8">
@@ -48,21 +47,21 @@
         <div class="col-md-12 col-lg-9">
         <div class="row">
         <div class="col-md-6 mb-md-0 mb-6">
-        <h2 class="footer-heading">Discover</h2>
+        <h2 class="footer-heading">Découvrer</h2>
         <ul class="">
-        <li><a href="#" class="py-1 d-block">Buy &amp; Sell</a></li>
-        <li><a href="#" class="py-1 d-block">Merchant</a></li>
-        <li><a href="#" class="py-1 d-block">Giving back</a></li>
-        <li><a href="#" class="py-1 d-block">Help &amp; Support</a></li>
+        <li><a href="#" class="linkb py-1 d-block">Acheter &amp; Vendre</a></li>
+        <li><a href="#" class="linkb py-1 d-block">Recettes</a></li>
+        <li><a href="#" class="linkb py-1 d-block">Vos recettes</a></li>
+        <li><a href="#" class="linkb py-1 d-block">Aide &amp; Support</a></li>
         </ul>
         </div>
         <div class="col-md-6 mb-md-0 mb-6">
-        <h2 class="footer-heading">About</h2>
+        <h2 class="footer-heading">À propos</h2>
         <ul class="list-unstyled">
-        <li><a href="#" class="py-1 d-block">Staff</a></li>
-        <li><a href="#" class="py-1 d-block">Team</a></li>
-        <li><a href="#" class="py-1 d-block">Careers</a></li>
-        <li><a href="#" class="py-1 d-block">Blog</a></li>
+        <li><a href="#" class="linkb py-1 d-block">Membres</a></li>
+        <li><a href="#" class="linkb py-1 d-block">Équipe</a></li>
+        <li><a href="#" class="linkb py-1 d-block">Carrière</a></li>
+        <li><a href="#" class="linkb py-1 d-block">Blog</a></li>
         </ul>
         </div>
         <!-- <div class="col-md-4 mb-md-0 mb-4">
@@ -86,22 +85,22 @@
         </div>
         </div>
         <div class="col-md-3 py-md-5 py-4 aside-stretch-right pl-lg-5">
-        <h2 class="footer-heading footer-heading-white">Contact us</h2>
+        <h2 class="footer-heading footer-heading-white">Contactez-nous</h2>
         <form action="#" class="contact-form">
         <div class="form-group">
-        <input type="text" class="form-control" placeholder="Your Name">
+        <input type="text" class="form-control" placeholder="Votre nom">
         </div>
         <div class="form-group">
-        <input type="text" class="form-control" placeholder="Your Email">
+        <input type="text" class="form-control" placeholder="Votre courriel">
         </div>
         <div class="form-group">
-        <input type="text" class="form-control" placeholder="Subject">
+        <input type="text" class="form-control" placeholder="Subjet">
         </div>
         <div class="form-group">
         <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
         </div>
         <div class="form-group">
-        <button type="submit" class="form-control submit px-3">Send</button>
+        <button type="submit" class="form-control submit px-3">Envoyez</button>
         </div>
         </form>
         </div>
