--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-lg">
         <h1 class="toto">Sprocket76 - Github</h1>
     </div>
     <div class="container-lg">
