--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="container-lg">
-        <h1 class="toto">Sprocket76 - Github</h1>
+        <h1 class="h1 toto">Sprocket76 - Github</h1>
     </div>
     <div class="container-lg">
         <h2>Mon premier repo github</h2>
